--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Alissa Madera</h1>
+							<p>Ph.D. Student in the Planetary Sciences</p>
 						</div>
 
 					<!-- Nav -->
