--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Alissa Madera</h1>
-							<p>Ph.D. Student in the Planetary Sciences</p>
+							<p>Graduate Researcher</p>
 						</div>
 
 					<!-- Nav -->
@@ -60,8 +60,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
+								<h2 class="alt">Hi! I'm <strong>Alissa</strong>, a <a href="http://html5up.net/license">Ph.D. student</a> responsive<br />
+								studying at <a href="http://html5up.net">Rutgers University</a>.</h2>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
 							</header>
