--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Alissa Madera</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Alissa Madera</h1>
-							<p>Graduate Researcher</p>
+							<p>Researcher | Student | Coder</p>
 						</div>
 
 					<!-- Nav -->
@@ -61,7 +61,7 @@
 
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Alissa</strong>, a <a href="http://html5up.net/license">Ph.D. student</a> responsive<br />
-								studying at <a href="http://html5up.net">Rutgers University</a>.</h2>
+								studying planetary sciences at <a href="http://html5up.net">the Department of Earth and Planetary Sciences (EPS), Rutgers University</a>.</h2>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
 							</header>
