--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Alissa</strong>, a <a href="http://html5up.net/license">Ph.D. student</a> studying planetary sciences <br />
-								at <a href="http://html5up.net">the Department of Earth and Planetary Sciences (EPS), Rutgers University</a>.</h2>
+								<h2 class="alt">Hello! I'm <strong>Alissa Madera</strong>, a <a>Ph.D. student studying planetary sciences </a> <br />
+								at the <a> Department of Earth and Planetary Sciences (EPS)</a>, Rutgers University.</h2>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
 							</header>
