--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hello! I'm <strong>Alissa Madera</strong>, a <a>Ph.D. student studying planetary sciences </a> <br />
-								at the <a> Department of Earth and Planetary Sciences (EPS)</a>, Rutgers University.</h2>
+								<h2 class="alt">Hello! I'm <strong>Alissa Madera</strong>, a <strong>Ph.D. student studying planetary sciences </strong> <br />
+								at the <a href="https://eps.rutgers.edu/" > Department of Earth and Planetary Sciences (EPS)</a>, Rutgers University.</h2>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
 							</header>
