--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 							<header>
 								<h2 class="alt">Hello! I'm <strong>Alissa Madera</strong>, a <strong>Ph.D. student studying planetary sciences </strong> <br />
 								at the <a href="https://eps.rutgers.edu/" > Department of Earth and Planetary Sciences (EPS)</a>, Rutgers University.</h2>
-								<p>This site serves as a portfolio of projects, research, publications, and awards<br />
-								that I have participated in and received over the years. Enjoy!</p>
+								<p>This site serves as a portfolio of my research career<br />
+								over the years. Enjoy!</p>
 							</header>
 
 							<footer>
