--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 							<header>
 								<h2 class="alt">Hello! I'm <strong>Alissa Madera</strong>, a <strong>Ph.D. student studying planetary sciences </strong> <br />
 								at the <a href="https://eps.rutgers.edu/" > Department of Earth and Planetary Sciences (EPS)</a>, Rutgers University.</h2>
-								<p>This site serves as a portfolio of my research career<br />
-								over the years. Enjoy!</p>
+								<p>This site serves as a portfolio of my research<br />
+								and achievements. I hope you enjoy!</p>
 							</header>
 
 							<footer>
@@ -74,11 +74,11 @@
 					</section>
 
 				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+					<section id="Research and Projects" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Research and Projects</h2>
 							</header>
 
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
