--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					</section>
 
 				<!-- Portfolio -->
-					<section id="Portfolio" class="two">
+					<section id="portfolio" class="two">
 						<div class="container">
 
 							<header>
