--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar64"><img src="images/For_LPI_InternPackage2.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/For_LPI_InternPackage2.jpg" alt="" /></span>
 							<h1 id="title">Alissa Madera</h1>
 							<p>Researcher | Student | Coder</p>
 						</div>
@@ -42,7 +42,7 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>52d554fcacabf5ccf0f4e91a3ba389900752b46e
 							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -112,6 +112,14 @@
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<header>
+											<h3>Magna Nullam</h3>
 										</header>
 									</article>
 								</div>
