--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Lunar-Sample-Provenance (LSP) Program </h3>
 										</header>
 									</article>
 								</div>
@@ -99,7 +99,7 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>MoonPIES</h3>
 										</header>
 									</article>
 								</div>
@@ -107,7 +107,7 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>How To Documents</h3>
 										</header>
 									</article>
 								</div>
