--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>I am third year Ph.D. student studying under Dr. Juliane Gross. My research focuses on understanding the petrology and geologic evolution of the Moon
-							by studying lunar samples, both returned and meteoritic using an interdisciplinary approach of combining remote sensing, modeling, and sample science. I have hopes of expanding my research
+							<p>I am third year Ph.D. student with a background in chemistry, studying under Dr. Juliane Gross. My research focuses on understanding the petrology and geologic evolution of the Moon
+							by studying lunar samples. To do this, I use an interdisciplinary approach of combining remote sensing, modeling, and sample science. I have hopes of expanding my research
 							to other planetary bodies such as Mars and Vesta.</p>
 
 						</div>
