--- a/index.html
+++ b/index.html
@@ -141,10 +141,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Please feel free to contact me using to form below. I can also be reached by email at am1505@eps.rutgers.edu</p>
 
 							<form method="post" action="#">
 								<div class="row">
