--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
 							<p>I am third year Ph.D. student with a background in chemistry, studying under Dr. Juliane Gross. My research focuses on understanding the petrology and geologic evolution of the Moon
 							by studying lunar samples, from basaltic to feldspathic lunar lithologies. To do this, I use an interdisciplinary approach of combining remote sensing, GIS, modeling, and sample science. I have hopes of expanding my research in the future
 							to other planetary bodies such as Mars and Vesta.</p>
+							
+							<p>You can access my personal circulum vitae here: CV </p>
 
 						</div>
 					</section>
