--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							by studying lunar samples, from basaltic to feldspathic lunar lithologies. To do this, I use an interdisciplinary approach of combining remote sensing, GIS, modeling, and sample science. I have hopes of expanding my research in the future
 							to other planetary bodies such as Mars and Vesta.</p>
 							
-							<p>You can access my personal circulum vitae here: CV </p>
+							<p>You can access my personal circulum vitae here: <a href= "CV/Madera_CV_March2022.pdf">CV</a></p>
 
 						</div>
 					</section>
