--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Please feel free to contact me using to form below. I can also be reached by email at am1505@eps.rutgers.edu</p>
+							<p>Please feel free to contact me using the form below. I can also be reached by email at <a href= "mailto: am1505@eps.rutgers.edu"> am1505@eps.rutgers.edu </a>.</p>
 
 							<form method="post" action="#">
 								<div class="row">
