--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								<h2>Research and Projects</h2>
 							</header>
 
-							<p>As an early career scientist, I am still building my research portfolio. The following are links current research, how-to documents I have procured, and projects I have collaborated on.</p>
+							<p>As an early career scientist, I am still building my research portfolio. The following are links of my current research, how-to documents I have procured, and projects I have collaborated on.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
