--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								<h2>Research and Projects</h2>
 							</header>
 
-							<p>As an early career scientist, I am still building my research portfolio. The following are links of my current research, how-to documents I have procured, and projects I have collaborated on.</p>
+							<p><strong>As an early career scientist, I am still building my research portfolio. The following are links of my current research, how-to documents I have procured, and projects I have collaborated on.</strong></p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -123,9 +123,9 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>I am third year Ph.D. student with a background in chemistry, studying under Dr. Juliane Gross. My research focuses on understanding the petrology and geologic evolution of the Moon
+							<p><strong>I am third year Ph.D. student with a background in chemistry, studying under Dr. Juliane Gross. My research focuses on understanding the petrology and geologic evolution of the Moon
 							by studying lunar samples, from basaltic to feldspathic lunar lithologies. To do this, I use an interdisciplinary approach of combining remote sensing, GIS, modeling, and sample science. I have hopes of expanding my research in the future
-							to other planetary bodies such as Mars and Vesta.</p>
+								to other planetary bodies such as Mars and Vesta.</strong></p>
 							
 							<p><strong>You can access my personal curriculum vitae here: <a href= "CV/Madera_CV_March2022.pdf">CV</a></strong></p>
 							
