--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://scholar.google.com/citations?user=8NBDYBcAAAAJ&hl=en" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
+							<li><a href="https://twitter.com/LissLovesSpace" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/AM-28" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto: am1505@eps.rutgers.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
