--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 							<p>Please feel free to contact me using the form below. I can also be reached by email at <a href= "mailto: am1505@eps.rutgers.edu"> am1505@eps.rutgers.edu </a>.</p>
 
-							<form method="post" action="#">
+							<form method="post" action="process.php">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
