--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="relative_urls/lsp.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>Lunar-Sample-Provenance (LSP) Program </h3>
 										</header>
