--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="relative_urls/MoonPIES.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>MoonPIES</h3>
 										</header>
@@ -101,7 +101,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="relative_urls/howtodocus.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>How To Documents</h3>
 										</header>
