--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -9,7 +9,7 @@
 		<title>Alissa Madera</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/For_LPI_InternPackage2.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="../images/For_LPI_InternPackage2.jpg" alt="" /></span>
 							<h1 id="title">Alissa Madera</h1>
 							<p>Researcher | Student | Coder</p>
 						</div>
@@ -52,10 +52,10 @@
 			</div>
 
 		<!-- Main -->
-			<div id="main">
+<!-- 			<div id="main"> -->
 
 				<!-- Intro -->
-					<section id="top" class="one dark cover">
+<!-- 					<section id="top" class="one dark cover">
 						<div class="container">
 
 							<header>
@@ -67,18 +67,18 @@
 
 							<footer>
 								<a href="#portfolio" class="button scrolly">Get To Know Me</a>
-							</footer>
+							</footer> -->
 
-						</div>
-					</section>
-
+<!-- 						</div>
+<!-- 					</section>
+ -->
 				<!-- Portfolio -->
-					<section id="portfolio" class="two">
-						<div class="container">
+<!-- 					<section id="portfolio" class="two">
+<!-- 						<div class="container">
 
 							<header>
-								<h2>Research and Projects</h2>
-							</header>
+								<h2>Research and Projects</h2> -->
+<!-- 							</header>
 
 							<p><strong>As an early career scientist, I am still building my research portfolio. The following are links of my current research, how-to documents I have procured, and projects I have collaborated on.</strong></p>
 
@@ -109,20 +109,20 @@
 								</div>
 							</div>
 
-						</div>
-					</section>
+						</div> -->
+<!-- 					</section> --> -->
 
 				<!-- About Me -->
-					<section id="about" class="three">
-						<div class="container">
+<!-- 					<section id="about" class="three">
+<!-- 						<div class="container">
 
 							<header>
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
-							<p><strong>I am third year Ph.D. student with a background in chemistry, studying under Dr. Juliane Gross. My research focuses on understanding the petrology and geologic evolution of the Moon
+<!-- 							<p><strong>I am third year Ph.D. student with a background in chemistry, studying under Dr. Juliane Gross. My research focuses on understanding the petrology and geologic evolution of the Moon
 							by studying lunar samples, from basaltic to feldspathic lunar lithologies. To do this, I use an interdisciplinary approach of combining remote sensing, GIS, modeling, and sample science. I have hopes of expanding my research in the future
 								to other planetary bodies such as Mars and Vesta.</strong></p>
 							
@@ -132,16 +132,16 @@
 							<p> -Viktor Vicsek, used to describe William Shakespeare.</p>
 							
 						</div>
-					</section>
-
+					</section> -->
+<!-- 
 				<!-- Contact -->
-					<section id="contact" class="four">
+<!-- 					<section id="contact" class="four">
 						<div class="container">
 
 							<header>
 								<h2>Contact</h2>
-							</header>
-
+							</header> --> -->
+<!-- 
 							<p>Please feel free to contact me using the form below. I can also be reached by email at <a href= "mailto: am1505@eps.rutgers.edu"> am1505@eps.rutgers.edu </a>.</p>
 
 							<form method="post" action="assets/process.php">
@@ -160,26 +160,26 @@
 						</div>
 					</section>
 
-			</div>
+			</div> --> -->
 
 		<!-- Footer -->
-			<div id="footer">
+<!-- 			<div id="footer"> -->
 
 				<!-- Copyright -->
-					<ul class="copyright">
+<!-- 					<ul class="copyright">
 						<li>&copy; Alissa Madera. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-			</div>
+					</ul> -->
+ -->
+<!-- 			</div> -->
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
