--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -52,26 +52,25 @@
 			</div>
 
 		<!-- Main -->
-<!-- 			<div id="main"> -->
+ 			<div id="main">
 
 				<!-- Intro -->
-<!-- 					<section id="top" class="one dark cover">
+ 					<section id="top" class="one">
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hello! I'm <strong>Alissa Madera</strong>, a <strong>Ph.D. student studying planetary sciences </strong> <br />
-								at the <a href="https://eps.rutgers.edu/" > Department of Earth and Planetary Sciences (EPS)</a>, Rutgers University.</h2>
-								<p>This site serves as a portfolio of my research<br />
-								and achievements. I hope you enjoy!</p>
+								<h2 class="alt"><strong> The Lunar-Sample-Provenance (LSP) Program </strong> <br /></h2>
+<!-- 								<p>This site serves as a portfolio of my research<br />
+								and achievements. I hope you enjoy!</p> -->
 							</header>
 
 							<footer>
 								<a href="#portfolio" class="button scrolly">Get To Know Me</a>
 							</footer> -->
 
-<!-- 						</div>
-<!-- 					</section>
- -->
+ 						</div>
+					</section>
+
 				<!-- Portfolio -->
 <!-- 					<section id="portfolio" class="two">
 <!-- 						<div class="container">
