--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -64,9 +64,9 @@
 								and achievements. I hope you enjoy!</p> -->
 							</header>
 
-							<footer>
+<!-- 							<footer>
 								<a href="#portfolio" class="button scrolly">Get To Know Me</a>
-							</footer> -->
+							</footer> --> -->
 
  						</div>
 					</section>
