--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -55,7 +55,7 @@
  			<div id="main">
 
 				<!-- Intro -->
- 					<section id="top" class="one">
+ 					<section id="top" class="two">
 						<div class="container">
 
 							<header>
