--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -59,7 +59,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"><strong> The Lunar-Sample-Provenance (LSP) Program </strong> <br /></h2>
+								<h2><strong> The Lunar-Sample-Provenance (LSP) Program </strong> <br /></h2>
 <!-- 								<p>This site serves as a portfolio of my research<br />
 								and achievements. I hope you enjoy!</p> -->
 							</header>
