--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -66,17 +66,17 @@
 
 <!-- 							<footer>
 								<a href="#portfolio" class="button scrolly">Get To Know Me</a>
-							</footer> --> -->
+							</footer> --> 
 
  						</div>
 					</section>
 
 				<!-- Portfolio -->
-<!-- 					<section id="portfolio" class="two">
-<!-- 						<div class="container">
+ 					<section id="portfolio" class="two">
+ 						<div class="container">
 
-							<header>
-								<h2>Research and Projects</h2> -->
+<!-- 							<header>
+								<h2>Research and Projects</h2> --> -->
 <!-- 							</header>
 
 							<p><strong>As an early career scientist, I am still building my research portfolio. The following are links of my current research, how-to documents I have procured, and projects I have collaborated on.</strong></p>
@@ -109,7 +109,7 @@
 							</div>
 
 						</div> -->
-<!-- 					</section> --> -->
+<!-- 					</section> --> 
 
 				<!-- About Me -->
 <!-- 					<section id="about" class="three">
@@ -139,7 +139,7 @@
 
 							<header>
 								<h2>Contact</h2>
-							</header> --> -->
+							</header> -->
 <!-- 
 							<p>Please feel free to contact me using the form below. I can also be reached by email at <a href= "mailto: am1505@eps.rutgers.edu"> am1505@eps.rutgers.edu </a>.</p>
 
@@ -159,7 +159,7 @@
 						</div>
 					</section>
 
-			</div> --> -->
+			</div> -->
 
 		<!-- Footer -->
 <!-- 			<div id="footer"> -->
