--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -56,7 +56,7 @@
 
 				<!-- Intro -->
  					<section id="top" class="two">
-						<div class="container">
+						<div>
 
 							<header>
 								<h2><strong> The Lunar-Sample-Provenance (LSP) Program </strong> <br /></h2>
@@ -76,7 +76,7 @@
  						<div class="container">
 
 <!-- 							<header>
-								<h2>Research and Projects</h2> --> -->
+								<h2>Research and Projects</h2> -->
 <!-- 							</header>
 
 							<p><strong>As an early career scientist, I am still building my research portfolio. The following are links of my current research, how-to documents I have procured, and projects I have collaborated on.</strong></p>
