--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -72,7 +72,7 @@
 					</section>
 
 				<!-- Portfolio -->
- 					<section id="portfolio" class="two">
+<!--  					<section id="portfolio" class="two">
  						<div class="container">
 
 <!-- 							<header>
