--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -52,20 +52,18 @@
 			</div>
 
 		<!-- Main -->
-<!-- 			<div id="main"> -->
+			<div id="main">
 
 				<!-- Intro -->
-<!-- 					<section id="top" class="one dark cover">
-						<div class="container">
+ 					<section id="top" class="one dark cover">
+						<div>
 
 							<header>
-								<h2 class="alt">Hello! I'm <strong>Alissa Madera</strong>, a <strong>Ph.D. student studying planetary sciences </strong> <br />
-								at the <a href="https://eps.rutgers.edu/" > Department of Earth and Planetary Sciences (EPS)</a>, Rutgers University.</h2>
-								<p>This site serves as a portfolio of my research<br />
-								and achievements. I hope you enjoy!</p>
+								<h2> <strong> MoonPIES: Modelling Ice Deposits and Permanently Shadowed Region (PSR) Stratigraphy<br/> 
+									at the Lunar South Pole</strong></h2>
 							</header>
 
-							<footer>
+<!-- 							<footer>
 								<a href="#portfolio" class="button scrolly">Get To Know Me</a>
 							</footer> -->
 
