--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -60,9 +60,8 @@
 
 							<header>
 								<h2><strong> The Lunar-Sample-Provenance (LSP) Program </strong> <br /></h2>
-								<p>This program is developed to pair chemical orbital datasets of the lunar surface<br />
-								with geochemical analyses of lunar meteorites. The goal is to be able to discern<br />
-								the potential source regions of these samples with an interdisciplinary approach.</p>
+								<p>This program is developed to pair chemical orbital datasets of the lunar surfacewith geochemical analyses of lunar meteorites. <br />
+								The goal is to be able to discern the potential source regions of these samples with an interdisciplinary approach.</p>
 							</header>
 
 <!-- 							<footer>
