--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -59,8 +59,8 @@
 						<div>
 
 							<header>
-								<h2> <strong> MoonPIES: Modelling Ice Deposits and Permanently Shadowed Region (PSR) Stratigraphy<br/> 
-									at the Lunar South Pole</strong></h2>
+								<h3> <strong> MoonPIES: Moon Polar Ice and Ejecta Stratigraphy (PIES) </strong> </h3>
+								<p><strong>Modelling Ice Deposits and Permanently Shadowed Region (PSR) Stratigraphy at the Lunar South Pole. </strong> </p>
 							</header>
 
 <!-- 							<footer>
