--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -108,7 +108,7 @@
 							</div>
 
 						</div> -->
-<!-- 					</section> --> -->
+<!-- 					</section> -->
 
 				<!-- About Me -->
 <!-- 					<section id="about" class="three">
@@ -138,7 +138,7 @@
 
 							<header>
 								<h2>Contact</h2>
-							</header> --> -->
+							</header> -->
 <!-- 
 							<p>Please feel free to contact me using the form below. I can also be reached by email at <a href= "mailto: am1505@eps.rutgers.edu"> am1505@eps.rutgers.edu </a>.</p>
 
@@ -158,7 +158,7 @@
 						</div>
 					</section>
 
-			</div> --> -->
+			</div> -->
 
 		<!-- Footer -->
 <!-- 			<div id="footer"> -->
@@ -167,7 +167,7 @@
 <!-- 					<ul class="copyright">
 						<li>&copy; Alissa Madera. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul> -->
- -->
+ 
 <!-- 			</div> -->
 
 		<!-- Scripts -->
