--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -60,7 +60,7 @@
 
 							<header>
 								<h2> <strong> MoonPIES: Moon Polar Ice and Ejecta Stratigraphy (PIES) </strong> </h2>
-								<p><strong>Modelling Ice Deposits and Permanently Shadowed Region (PSR) Stratigraphy at the Lunar South Pole. </strong> </p>
+								<p><strong>Modelling ancient ice deposits in permanently shadowed regions (PSR) at the lunar south pole. </strong></p>
 							</header>
 
 <!-- 							<footer>
