--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -70,17 +70,18 @@
 <!-- 						</div>
 <!-- 					</section>
  -->
-				<!-- Portfolio -->
-<!-- 					<section id="portfolio" class="two">
-<!-- 						<div class="container">
+ 				<!-- Portfolio -->
+					<section id="portfolio" class="two">
+ 						<div class="container">
 
-							<header>
-								<h2>Research and Projects</h2> -->
-<!-- 							</header>
+<!-- 							<header>
+								<h2>Research and Projects</h2>
+							</header> -->
 
-							<p><strong>As an early career scientist, I am still building my research portfolio. The following are links of my current research, how-to documents I have procured, and projects I have collaborated on.</strong></p>
+							<p><strong>This program was developed during the 2021 Lunar and Planetary Institute (LPI) Exploration Summer Science Graduate Internship.</strong></p>
+								
 
-							<div class="row">
+<!-- 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
@@ -105,10 +106,10 @@
 										</header>
 									</article>
 								</div>
-							</div>
+							</div> -->
 
-						</div> -->
-<!-- 					</section> -->
+						</div> 
+<!-- 					</section>
 
 				<!-- About Me -->
 <!-- 					<section id="about" class="three">
