--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -71,9 +71,8 @@
 <!-- 							<footer>
 								<a href="#portfolio" class="button scrolly">Get To Know Me</a>
 							</footer> -->
-
-<!-- 						</div>
-<!-- 					</section>
+ 						</div>
+ 					</section>
  -->
  				<!-- Portfolio -->
 					<section id="portfolio" class="two">
