--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -65,7 +65,7 @@
 								T. G. Paladino, R. V. Patterson, F. B. Wroblewski, and D. A. Kring </p>
 							</header>
 							<ul class="icons">
-								<li><a href="https://github.com/cjtu/moonpies" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								Project Github: <li><a href="https://github.com/cjtu/moonpies" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							</ul>
 
 <!-- 							<footer>
