--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -61,11 +61,11 @@
 							<header>
 								<h2> <strong> MoonPIES: Moon Polar Ice and Ejecta Stratigraphy (PIES) </strong> </h2>
 								<p><strong>Modelling ancient ice deposits in permanently shadowed regions (PSR) at the lunar south pole. </strong></p>
-								<p> C. J. Tai Udovocic, K. R. Frizzell, G. L. Kodikara, M. Kopp, K. M. Luchsinger, <strong> A. Madera </strong>, M. L. Meier </br>
+								<p> C. J. Tai Udovocic, K. R. Frizzell, G. L. Kodikara, M. Kopp, K. M. Luchsinger, <strong> A. Madera* </strong>, M. L. Meier </br>
 								T. G. Paladino, R. V. Patterson, F. B. Wroblewski, and D. A. Kring </p>
 							</header>
 							<ul class="icons">
-								Project Github: <li><a href="https://github.com/cjtu/moonpies" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<strong> Project Github: </strong> <li><a href="https://github.com/cjtu/moonpies" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							</ul>
 
 <!-- 							<footer>
