--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -55,9 +55,8 @@
  			<div id="main">
 
 				<!-- Intro -->
- 					<section id="top" class="two">
+ 					<section id="top" class="one dark cover">
 						<div>
-
 							<header>
 								<h2><strong> The Lunar-Sample-Provenance (LSP) Program </strong> <br /></h2>
 								<p>This program is developed to pair chemical orbital datasets of the lunar surfacewith geochemical analyses of lunar meteorites. <br />
