--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -61,6 +61,11 @@
 								<h2><strong> The Lunar-Sample-Provenance (LSP) Program </strong> <br /></h2>
 								<p>This program is developed to pair chemical orbital datasets of the lunar surfacewith geochemical analyses of lunar meteorites. <br />
 								The goal is to be able to discern the potential source regions of these samples with an interdisciplinary approach.</p>
+								<p> <strong> A. Madera* </strong>, J. Gross </p>
+								
+								<ul class="icons">
+									LSP Github: <li><a href="https://github.com/AM-28/lunar-sample-provenance" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								</ul>
 							</header>
 
 <!-- 							<footer>
