--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
 											<h3>MoonPIES</h3>
 										</header>
 									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<header>
+											<h3>Publications, Abstracts, Blog Posts</h3>
+										</header>
+									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
