--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="researchandprojects/PubsandAwards.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>Publications, Abstracts, Blog Posts</h3>
 										</header>
