--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -59,14 +59,17 @@
 						<div>
 							<header>
 								<h2><strong> The Lunar-Sample-Provenance (LSP) Program </strong> <br /></h2>
-								<p>This program is developed to pair chemical orbital datasets of the lunar surfacewith geochemical analyses of lunar meteorites. <br />
-								The goal is to be able to discern the potential source regions of these samples with an interdisciplinary approach.</p>
+								<p>This program is developed to remote sensing chemical observations of the lunar surface with geochemical analyses of lunar meteorites. <br />
+								The goal is to be able to discern the potential source regions of these samples using a combination of dervied datasets that varied < br /> 
+								orbital instrumentation and resulting spatial resoltuions. This program provides the community with a method of understanding the geological <br />
+								context of lunar meteorites.</p>
+								
 								<p> <strong> A. Madera* </strong>, J. Gross </p>
+							</header>
 								
 								<ul class="icons">
 									LSP Github: <li><a href="https://github.com/AM-28/lunar-sample-provenance" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								</ul>
-							</header>
 
 <!-- 							<footer>
 								<a href="#portfolio" class="button scrolly">Get To Know Me</a>
