--- a/researchandprojects/howtodocus.html
+++ b/researchandprojects/howtodocus.html
@@ -163,14 +163,14 @@
 			</div> --> -->
 
 		<!-- Footer -->
-<!-- 			<div id="footer"> -->
+			<div id="footer">
 
 				<!-- Copyright -->
-<!-- 					<ul class="copyright">
+					<ul class="copyright">
 						<li>&copy; Alissa Madera. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul> -->
- -->
-<!-- 			</div> -->
+					</ul>
+
+			</div>
 
 		<!-- Scripts -->
 			<script src="../assets/js/jquery.min.js"></script>
