--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="researchandprojects/howtodocus.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="researchandprojects/howtodocus.html" class="image fit"><img src="images/howto.jpg" alt="" /></a>
 										<header>
 											<h3>How To Documents</h3>
 										</header>
