--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -81,7 +81,11 @@
 								<h2>Research and Projects</h2>
 							</header> -->
 
-							<p><strong>This program was developed during the 2021 Lunar and Planetary Institute (LPI) Exploration Summer Science Graduate Internship.</strong></p>
+							<p><strong>This program was developed during the 2021 Lunar and Planetary Institute (LPI) Exploration Summer Science Graduate Internship. The main collaborators
+								that developed the program over 8 weeks were C. J. Tai Udovocic, K. R. Frizzell, K. M. Luchsinger, A. Madera*, and T. G. Paladino. </strong></p>
+							
+							<p><strong>NASA will return to the lunar surface in the late 2020's with the Artemis program. The target of these missions is the lunar south pole, chosen for geological and exploration 
+								science implications. 
 								
 
 <!-- 							<div class="row">
@@ -112,7 +116,7 @@
 							</div> -->
 
 						</div> 
-<!-- 					</section>
+ 					</section>
 
 				<!-- About Me -->
 <!-- 					<section id="about" class="three">
