--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -59,9 +59,9 @@
 						<div>
 							<header>
 								<h2><strong> The Lunar-Sample-Provenance (LSP) Program </strong> <br /></h2>
-								<p>This program is developed to remote sensing chemical observations of the lunar surface with geochemical analyses of lunar meteorites. <br />
-								The goal is to be able to discern the potential source regions of these samples using a combination of dervied datasets that varied orbital <br /> 
-								instrumentation and resulting spatial resoltuions. This program provides the community with a method <br /> 
+								<p>This program is developed to remote sensing chemical observations of the lunar surface with geochemical analyses of lunar meteorites. The goal is to be <br />
+								able to discern the potential source regions of these samples using a combination of dervied datasets that varied orbital instrumentation <br /> 
+								and resulting spatial resoltuions. This program provides the community with a method <br /> 
 								of understanding the geological context of lunar meteorites.</p>
 								
 								<p> <strong> A. Madera* </strong>, J. Gross </p>
