--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="researchandprojects/MoonPIES.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="researchandprojects/MoonPIES.html" class="image fit"><img src="images/MoonPies.jpg" alt="" /></a>
 										<header>
 											<h3>MoonPIES</h3>
 										</header>
