--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
 							<p><em>"A jack of all trades is a master of none, but oftentimes better than a master of one"</em></p>
 							<p> -Viktor Vicsek, used to describe William Shakespeare.</p>
 							
+							<p><strong> Research Interests: Planetary geology, petrology, and geochemistry </strong></p>
+						
 						</div>
 					</section>
 
