--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									<article class="item">
 										<a href="researchandprojects/MoonPIES.html" class="image fit"><img src="images/MoonPies.jpg" alt="" /></a>
 										<header>
-											<h3>MoonPIES</h3>
+											<h3>MoonPIES (Collaboration)</h3>
 										</header>
 									</article>
 									<article class="item">
