--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Research and Projects</span></a></li>
+								<li><a href="#research" id="portfolio-link"><span class="icon solid fa-chart-scatter">Current Research</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Projects</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
@@ -66,21 +67,30 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Get To Know Me</a>
+								<a href="#research" class="button scrolly">Get To Know Me</a>
 							</footer>
 
 						</div>
 					</section>
-
+					<section id="research" class="two">
+						<div class="container">
+							<header>
+								<h2> Current Research </h2>
+							</header>
+					
+							<p><strong>The following is a summary of my current doctoral research.</strong></p>
+						</div>
+					<section>	
+								
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Research and Projects</h2>
+								<h2>Projects</h2>
 							</header>
 
-							<p><strong>As an early career scientist, I am still building my research portfolio. The following are links of my current research, how-to documents I have procured, and projects I have collaborated on.</strong></p>
+							<p><strong>As an early career scientist, I am still building my research portfolio. The following are links of personal projects, projects of collaboration, how-to documents I have procured, and written work.</strong></p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
