--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 
 						</div>
 					</section>
+				
+				<!-- Research -->
 					<section id="research" class="two">
 						<div class="container">
 							<header>
