--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					
 							<p><strong>The following is a summary of my current doctoral research.</strong></p>
 						</div>
-					<section>	
+					</section>	
 								
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
