--- a/researchandprojects/lsp.html
+++ b/researchandprojects/lsp.html
@@ -68,7 +68,8 @@
 							</header>
 								
 								<ul class="icons">
-									Project Github: <li><a href="https://github.com/AM-28/lunar-sample-provenance" class="icon brands fa-github"><span class="label">Github</span></a></li> Coming Soon
+									Project Github: <li><a class="icon brands fa-github"><span class="label">Github</span></a></li> Coming Soon
+<!-- 									 href="https://github.com/AM-28/lunar-sample-provenance" -->
 								</ul>
 
 <!-- 							<footer>
