--- a/researchandprojects/MoonPIES.html
+++ b/researchandprojects/MoonPIES.html
@@ -65,7 +65,8 @@
 								T. G. Paladino, R. V. Patterson, F. B. Wroblewski, and D. A. Kring </p>
 							</header>
 							<ul class="icons">
-								<strong> Project Github: </strong> <li><a href="https://github.com/cjtu/moonpies" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<strong> Project Github: </strong> <li><a class="icon brands fa-github"><span class="label">Github</span></a></li> Coming Soon
+<!-- 								href="https://github.com/cjtu/moonpies" -->
 							</ul>
 <!-- 							<footer>
 								<a href="#portfolio" class="button scrolly">Get To Know Me</a>
