--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="researchandprojects/lsp.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>Lunar-Sample-Provenance (LSP) Program: Constraining Source Regions of Lunar Meteoritic Samples</h3>
 										</header>
@@ -95,7 +95,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="researchandprojects/lsp.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>NNL Clan: Petrology and Geochemistry of Young, Lunar Mare Basaltic Meteorites </h3>
 										</header>
@@ -103,7 +103,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="researchandprojects/lsp.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3> Comparing FTIR with Chandrayaan-1 Moon Mineralogy Mapper </h3>
 										</header>
@@ -111,7 +111,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="researchandprojects/lsp.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3> Development of Mars-Sample-Provenance (MSP) Program </h3>
 										</header>
