--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a class="image small"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3>NNL Clan: Petrology and Geochemistry of Young, Lunar Mare Basaltic Meteorites </h3>
 										</header>
