--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
 										<header>
 											<h3>NNL Clan: Petrology and Geochemistry of Young, Lunar Mare Basaltic Meteorites </h3>
 										</header>
+										<p> The North-North-Lapaz (NNL) Clan is a group of young, mare basaltic meteorites (~2.7 - 3.0 Ga) that are distinct in chemistry, texture, and age from both
+										basaltic returned and meteoritic samples. One sample in particular, NWA 8632, is the newest and least studied. Using a combination of EPMA analyses, LA-ICP-MS, and modelling, 
+										I am investigating the petrogenic history of this sample. The goal is to understand this sample's pre-eruption parental melt production, magma chamber dynamics, as well as emplacement onto
+										the lunar surface. We can investigate potentially where this sample, as well as the remaining NNL clan, may be source from on the lunar surface by applying
+										the LSP program. By understanding this unique clan of meteorites, we can place further constraints on mare basaltic volcanism during the eruption period of the NNL Clan.
+										
+										 
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
@@ -108,14 +115,14 @@
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-12-mobile">
+<!-- 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3> Development of Mars-Sample-Provenance (MSP) Program </h3>
 										</header>
 									</article>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</section>	
