--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 									<article class="item">
 										<a href="researchandprojects/lsp.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Lunar-Sample-Provenance (LSP) Program </h3>
+											<h3><a href="researchandprojects/lsp.html" >Lunar-Sample-Provenance (LSP) Program </a> </h3>
 										</header>
 									</article>
 								</div>
@@ -150,13 +150,13 @@
 									<article class="item">
 										<a href="researchandprojects/MoonPIES.html" class="image fit"><img src="images/MoonPies.jpg" alt="" /></a>
 										<header>
-											<h3>MoonPIES (Collaboration)</h3>
+											<h3> <a href="researchandprojects/MoonPIES.html" >MoonPIES (Collaboration)</a> </h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="researchandprojects/PubsandAwards.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Publications, Abstracts, Blog Posts</h3>
+											<h3><a href="researchandprojects/PubsandAwards.html" >Publications, Abstracts, Blog Posts </a> </h3>
 										</header>
 									</article>
 								</div>
@@ -164,7 +164,7 @@
 									<article class="item">
 										<a href="researchandprojects/howtodocus.html" class="image fit"><img src="images/howto.jpg" alt="" /></a>
 										<header>
-											<h3>How To Documents</h3>
+											<h3><a href="researchandprojects/howtodocus.html" >How To Documents </a> </h3>
 										</header>
 									</article>
 								</div>
@@ -183,7 +183,7 @@
 
 							<a class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p><strong>I am third year Ph.D. student with a background in chemistry, studying under Dr. Juliane Gross. My research focuses on understanding the petrology and geologic evolution of the Moon
+							<p align="center"><strong>I am third year Ph.D. student with a background in chemistry, studying under Dr. Juliane Gross. My research focuses on understanding the petrology and geologic evolution of the Moon
 							by studying lunar samples, from basaltic to feldspathic lunar lithologies. To do this, I use an interdisciplinary approach of combining remote sensing, GIS, modeling, and sample science. I have hopes of expanding my research in the future
 								to other planetary bodies such as Mars and Vesta.</strong></p>
 							
